# specsearch

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN.md  architecture.drawio
src/specsearch/: app.py  cli.py  config.py  eval.py  generate.py  index.py  ingest.py  mcp_server.py  pipeline.py  rerank.py  retrieve.py
tests/: conftest.py  eval_set.json  test_chunking.py  test_citations.py  test_eval.py  test_fusion.py  test_index.py  test_rerank.py  test_scaffold.py  test_smoke.py
