[project]
name = "specsearch"
version = "0.1.0"
description = "Hybrid RAG search engine over construction-spec PDFs"
requires-python = ">=3.12"
dependencies = [
    "chromadb",
    "elasticsearch>=8,<9",
    "sentence-transformers",
    "pymupdf",
    "fastmcp",
    "streamlit",
    "ollama",
    "typer",
    "python-dotenv",
    "torch",
]

[project.scripts]
specsearch = "specsearch.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/specsearch"]

[dependency-groups]
dev = ["pytest", "ruff"]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
